Change title from 'Ahorcado' to 'Ahorcadito'

--- a/Vale/Perro/Huesos/2/index.html
+++ b/Vale/Perro/Huesos/2/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Ahorcado – 28 Huesos del Perro</title>
+<title>Ahorcadito</title>
 
 <style>
 body{
