Rename game and update image description

--- a/Vale/Perro/Huesos/2/index.html
+++ b/Vale/Perro/Huesos/2/index.html
@@ -143,7 +143,7 @@ footer strong{color:#00ffff}
 
   <!-- JUEGO -->
   <div class="game-box">
-    <h2>Ahorcado – 28 Huesos del Perro</h2>
+    <h2>Ahorcadito</h2>
 
     <div class="niveles">
       <button onclick="setNivel(0)" id="b0" class="activo">Cabeza</button>
@@ -175,7 +175,7 @@ footer strong{color:#00ffff}
 
   <!-- IMAGEN -->
   <div class="img-box">
-    <h3 style="color:#00ffff">Imagen numerada</h3>
+    <h3 style="color:#00ffff">Imagen Osteología canina</h3>
     <img src="imagen.jpg">
   </div>
 
