--- a/Vale/Gato/Huesos/1/index.html
+++ b/Vale/Gato/Huesos/1/index.html
@@ -178,7 +178,7 @@ footer span strong{
   <div class="img-box">
     <img src="imagen.jpg">
     <br>
-    <a href="#">
+    <a href="https://cgviviana.github.io/Juego_Prueba/Vale/Gato/Huesos/2/">
       <button class="btn-juego">▶ EMPEZAR JUEGO</button>
     </a>
   </div>
