--- a/Ej/Brz/index.html
+++ b/Ej/Brz/index.html
@@ -1,88 +1,82 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Libro: Brazos y Pecho</title>
-  <style>
-    body{margin:0;font-family:Arial,sans-serif;background:#111827;color:#e5e7eb}
-    .app{max-width:820px;margin:auto;padding:16px}
-    h1{font-size:18px;margin-bottom:10px}
-    .page{
-      background:#fff;color:#111827;border-radius:14px;padding:16px;
-      min-height:520px;box-shadow:0 14px 40px rgba(0,0,0,.35)
-    }
-    .top{display:flex;justify-content:space-between}
-    h2{margin:0}
-    .why{color:#4b5563;margin:6px 0 14px}
-    .imgbox{
-      border:2px dashed #cbd5e1;border-radius:12px;
-      min-height:220px;display:flex;align-items:center;justify-content:center;
-      background:#f8fafc;margin-bottom:14px
-    }
-    .imgbox img{width:100%;height:100%;object-fit:contain;display:none}
-    ol{padding-left:18px}
-    li{margin:6px 0}
-    .dose{margin-top:10px;color:#374151;font-size:14px}
-    .controls{display:flex;gap:10px;margin-top:12px}
-    button{
-      flex:1;padding:12px;border-radius:12px;
-      border:1px solid #374151;background:#111827;color:#e5e7eb;
-      font-weight:bold;cursor:pointer
-    }
-    button:disabled{opacity:.4}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Libro – Brazos y Pecho</title>
+<style>
+body{margin:0;font-family:Arial,sans-serif;background:#111827;color:#e5e7eb}
+.app{max-width:820px;margin:auto;padding:16px}
+h1{font-size:18px;margin-bottom:10px}
+.page{background:#fff;color:#111827;border-radius:14px;padding:16px;
+min-height:520px;box-shadow:0 14px 40px rgba(0,0,0,.35)}
+.top{display:flex;justify-content:space-between}
+h2{margin:0}
+.why{color:#4b5563;margin:6px 0 14px}
+.imgbox{border:2px solid #cbd5e1;border-radius:12px;
+min-height:220px;display:flex;align-items:center;justify-content:center;
+background:#f8fafc;margin-bottom:14px}
+.imgbox img{width:100%;height:100%;object-fit:contain}
+ol{padding-left:18px}
+li{margin:6px 0}
+.dose{margin-top:10px;color:#374151;font-size:14px}
+.controls{display:flex;gap:10px;margin-top:12px}
+button{flex:1;padding:12px;border-radius:12px;
+border:1px solid #374151;background:#111827;color:#e5e7eb;
+font-weight:bold;cursor:pointer}
+button:disabled{opacity:.4}
+</style>
 </head>
 
 <body>
 <div class="app">
-  <h1>📘 Brazos y Pecho (3 ejercicios)</h1>
-  <div class="page" id="page"></div>
+<h1>📘 Brazos y Pecho</h1>
+<div class="page" id="page"></div>
 
-  <div class="controls">
-    <button id="prev">← Anterior</button>
-    <button id="next">Siguiente →</button>
-  </div>
+<div class="controls">
+<button id="prev">← Anterior</button>
+<button id="next">Siguiente →</button>
+</div>
 </div>
 
 <script>
-const pages = [
-  {
-    title:"Curl de bíceps sentado",
-    why:"Da firmeza al brazo y evita el aspecto fofo.",
-    img:"", // img/biceps_sentado.jpg
-    steps:[
-      "Siéntate con espalda apoyada.",
-      "Brazos a los lados, mancuernas en las manos.",
-      "Dobla los codos y sube las pesas.",
-      "Baja lento, controlando."
-    ],
-    dose:"3 × 12–15 (lento)"
-  },
-  {
-    title:"Press de pecho acostada",
-    why:"Fortalece pecho y brazos sin cargar el cuello.",
-    img:"", // img/pecho_acostada.jpg
-    steps:[
-      "Acuéstate boca arriba.",
-      "Mancuernas a la altura del pecho.",
-      "Empuja al frente, no hacia arriba.",
-      "Baja lento y controlado."
-    ],
-    dose:"3 × 10–12"
-  },
-  {
-    title:"Remo con mancuernas sentado",
-    why:"Endurece brazos y espalda, mejora postura.",
-    img:"", // img/remo_sentado.jpg
-    steps:[
-      "Siéntate con espalda recta.",
-      "Brazos al frente con mancuernas.",
-      "Jala hacia el cuerpo.",
-      "Aprieta atrás y baja lento."
-    ],
-    dose:"3 × 12"
-  }
+const pages=[
+{
+title:"Curl de bíceps sentado",
+why:"Da firmeza al brazo y quita el aspecto gelatinoso.",
+img:"img/biceps_sentado.jpg",
+steps:[
+"Siéntate con la espalda apoyada.",
+"Brazos a los lados, mancuernas en las manos.",
+"Flexiona los codos y sube.",
+"Baja lento y controlado."
+],
+dose:"3 × 12–15"
+},
+{
+title:"Press de pecho acostada",
+why:"Fortalece pecho y brazos sin cargar cuello ni columna.",
+img:"img/pecho_acostada.jpg",
+steps:[
+"Acuéstate boca arriba.",
+"Mancuernas a la altura del pecho.",
+"Empuja al frente.",
+"Baja lento."
+],
+dose:"3 × 10–12"
+},
+{
+title:"Remo con mancuernas sentado",
+why:"Endurece brazos y espalda, mejora postura.",
+img:"img/remo_sentado.jpg",
+steps:[
+"Siéntate derecha.",
+"Brazos al frente con mancuernas.",
+"Jala hacia el cuerpo.",
+"Aprieta atrás y baja lento."
+],
+dose:"3 × 12"
+}
 ];
 
 let i=0;
@@ -91,33 +85,18 @@ const prev=document.getElementById("prev");
 const next=document.getElementById("next");
 
 function render(){
-  const p=pages[i];
-  page.innerHTML=`
-    <div class="top">
-      <h2>${p.title}</h2>
-      <b>${i+1}/3</b>
-    </div>
-    <p class="why">${p.why}</p>
-
-    <div class="imgbox">
-      <img id="img">
-      <span id="ph">ESPACIO PARA FOTO</span>
-    </div>
-
-    <ol>${p.steps.map(s=>`<li>${s}</li>`).join("")}</ol>
-    <p class="dose"><b>Cuánto:</b> ${p.dose}</p>
-  `;
-
-  const img=document.getElementById("img");
-  const ph=document.getElementById("ph");
-  if(p.img){
-    img.src=p.img;
-    img.style.display="block";
-    ph.style.display="none";
-  }
-
-  prev.disabled=i===0;
-  next.disabled=i===pages.length-1;
+const p=pages[i];
+page.innerHTML=`
+<div class="top">
+<h2>${p.title}</h2>
+<b>${i+1}/3</b>
+</div>
+<p class="why">${p.why}</p>
+<div class="imgbox"><img src="${p.img}"></div>
+<ol>${p.steps.map(s=>`<li>${s}</li>`).join("")}</ol>
+<p class="dose"><b>Cuánto:</b> ${p.dose}</p>`;
+prev.disabled=i===0;
+next.disabled=i===pages.length-1;
 }
 
 prev.onclick=()=>{if(i>0){i--;render();}};
@@ -126,4 +105,3 @@ render();
 </script>
 </body>
 </html>
-
