Enhance imgbox styles for better image display
Add styles for images in the imgbox class

--- a/Ej/Brz/index.html
+++ b/Ej/Brz/index.html
@@ -25,6 +25,13 @@ button{flex:1;padding:12px;border-radius:12px;
 border:1px solid #374151;background:#111827;color:#e5e7eb;
 font-weight:bold;cursor:pointer}
 button:disabled{opacity:.4}
+
+  .imgbox img{
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+}
+
 </style>
 </head>
 
